fixing odd spacing on project and index

--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ img {
 
 .changes, .moodboard, .logo, .personas-pic, .processpic, .stacks-pic, .landing, .flow-pic, .dashboard {
   float: none;
-  margin: 4rem 0 4rem 2rem;
+  margin: 4rem 1rem 4rem 1rem;
   padding: 0;
   width: 95%;
 }
@@ -315,9 +315,9 @@ img {
   }
 }
 
-@media screen and (min-width: 575px) {
+@media screen and (min-width: 650px) {
   .hero-text {
-    margin: 0 4rem 0 7rem;
+    margin: 0 7rem 0 7rem;
   }
 
   .buttona {
@@ -340,7 +340,7 @@ img {
   }
 
   .section {
-    margin: 3rem 13rem 3rem 4rem;
+    margin: 3rem 15rem 3rem 15rem;
   }
 }
 
